.devcontainer 다시 설정 및 DB와 마커 연동

--- a/app/react-app/nightsafe/index.html
+++ b/app/react-app/nightsafe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>밤길안전서비스</title>
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a4da41a39f1950b70e5a83d35799a8a1&autoload=true&libraries=services"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a4da41a39f1950b70e5a83d35799a8a1&autoload=true&libraries=services,clusterer"></script>
   </head>
   <body>
     <div id="root"></div>
