--- a/app/react-app/nightsafe/index.html
+++ b/app/react-app/nightsafe/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.png">
     <title>밤길안전서비스</title>
     <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=5cd94a0601cc4e4e38cfdc5e1d80c234&autoload=true&libraries=services,clusterer"></script>
   </head>
